# Titan-creator

./: .gitignore  promt.md  pyproject.toml
.kiro/specs/chess-video-translator/: .config.kiro  design.md  requirements.md  tasks.md
src/: audio_extractor.py  bot.py  config.py  drive_manager.py  errors.py  main.py  models.py  pipeline.py  speech_recognizer.py  speech_synthesizer.py  subtitle_generator.py  translator.py  video_merger.py  vocal_separator.py
tests/: conftest.py
tests/test_unit/: test_audio_extractor.py  test_config.py  test_errors.py  test_models.py  test_pipeline.py  test_speech_recognizer.py  test_speech_synthesizer.py  test_translator.py  test_video_merger.py
